[project]
name = "turtle"
version = "1.0.0"
description = "Turtle: Learning Truncated Causal History Model for Video Restoration (NeurIPS 2024)"
readme = "readme.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "numpy<2",
    "opencv-python>=4.5",
    "Pillow>=9.1",
    "pyyaml>=6.0",
    "scipy>=1.8",
    "scikit-image>=0.19",
    "matplotlib>=3.5",
    "tqdm>=4.64",
    "einops>=0.6",
    "addict>=2.4",
    "future>=0.18",
    "lmdb>=1.3",
    "requests",
    "yapf",
    "tensorboard",
    "gdown>=5.0",
]

# basicsr is used as an in-tree namespace package via sys.path (no build step
# required for inference), so the project itself is not installed as a package.
[tool.setuptools]
py-modules = []

# Install CUDA 12.1 builds of torch / torchvision (works on RTX 40-series / Ada).
[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
